# FirstFullStackWebApi

./: .gitignore  web.js
Test/: test.py
binfk_backend/: main.py  projectdataschema.json  pyproject.toml
binfk_backend/REPORTS/TIPL_100/: metadata.json
binfk_backend/REPORTS/TIPL_100/QC/: AK_accessKeys.csv  Table2.xlsx
binfk_backend/REPORTS/TIPL_200/: metadata.json
binfk_backend/REPORTS/TIPL_300/: metadata.json
binfk_backend/REPORTS/TIPL_400/: metadata.json
binfk_backend/REPORTS/TIPL_400/QC/: manualE6440-index details.xlsx
binfk_backend/pages/Labdb/: push.py  update.py
binfk_backend/pages/REPORTS/TIPL_100/: metadata.json
binfk_backend/pages/REPORTS/TIPL_200/: metadata.json
binfk_backend/pages/SsubF/: .env  ProjDet.py  db.ipynb
binfk_backend/routes/: catalog.py  fileUpload.ipynb  initialization.py  intake.py  projectforms.py  projectsinfo.py  projectsrepos.py  samsubmission.py
binfk_backend/templates/: qctemplate.html  reportsmailtemplate.html  samsubtemplate.html
binfk_backend/test_database_logic/: database.ipynb  database.py  llmLoad.py
binfk_backend/utils/: Classses.ipynb  LlmCall.py
binfk_console/: package-lock.json  package.json
binfk_console/src/: auth.config.js  middleware.js
tcConsoleBackend/: auth.json  chat.json  main.py  pyproject.toml
tcConsoleBackend/routers/: auth.py  catalog.py  fileUpload.ipynb  initialization.py  intake.py  items.py  llinter.py  projectforms.py  projectsinfo.py  projectsrepos.py  samsubmission.py
tcConsoleBackend/schemas/: schema.py
tcConsoleBackend/templates/: librqctemplate.html  qctemplate.html  (+4 more)
(+104 files in other folders)
