[project]
name = "binfk-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "pymongo>=4.16.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "uvicorn>=0.40.0",
]
